# mask_maker

./: CMakeLists.txt  package.xml
include/mask_maker/: MaskMaker.h
launch/: gaz_of_fft.launch  gaz_of_ocl.launch  test.launch  virtual.launch
src/: FSCoolPointOptFlow.cl  MaskMaker.cpp  main.cpp
